JavaScript fixes and works 1. Implement link load information on edge panel 2. Fix link panel for the selected ages on mouseover not showing up if panel was closed before

--- a/web-phalcon/public/css/graph.css
+++ b/web-phalcon/public/css/graph.css
@@ -12,7 +12,7 @@
     z-index: 25;
     height: 200px;
     padding-bottom: 10px;
-    width: 230px;
+    width: 260px;
     position: fixed;
     right: 20px;
     bottom: 10px;
